<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Invader</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game!</string>
    <string name="help">Help</string>
    <string name="exit">Exit Game</string>
    <string name="impressum">© Ludwig Biermann</string>
    <string name="connect">mit der Connection Machine verbinden</string>
    <string name="confirm">ja</string>
    <string name="cancel">nein</string>
    <string name="back">zurück</string>
    <string name="quit_question">Wollen sie das Spiel wirklich verlassen?</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
	<string name="desc_fire_button">fire button</string>
	<string name="desc_background">375980 by Peter Schenk from pixelio.de</string>
</resources>
