<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/menu_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/newgame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/newgame" />
        
        <Button
            android:id="@+id/help"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newgame"
            android:text="@string/help" />

        <Button
            android:id="@+id/exit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help"
            android:text="@string/exit" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/impressum"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>